* AUTHORS, THANKS: Peter Ekberg got married, now Peter Rosin.

--- a/AUTHORS
+++ b/AUTHORS
@@ -25,6 +25,6 @@
 
 * The following people also enjoy write access under the given rules:
 
-    Peter Ekberg		peda@lysator.liu.se
+    Peter Rosin			peda@lysator.liu.se
     Noah Misch			noah@cs.caltech.edu
     Charles Wilson		libtool@cwilson.fastmail.fm
