--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-07-14  Peter Rosin  <peda@lysator.liu.se>
+
+	* AUTHORS, THANKS: Peter Ekberg got married, now Peter Rosin.
+
 2007-07-13  Charles Wilson  <libtool@cwilson.fastmail.fm>
 
 	* libltdl/m4/libtool.m4 (func_dirname_and_basename) <XSI>:
