--- a/THANKS
+++ b/THANKS
@@ -58,7 +58,7 @@
   Paolo Bonzini			bonzini@gnu.org			  2003-03-01
   Noah Jeffrey Misch		noah@cs.caltech.edu		  2004-07-05
   Thorsten Glaser		tg@66h.42h.de			  2004-10-11
-  Peter Ekberg			peda@lysator.liu.se		  2005-04-12
+  Peter Rosin			peda@lysator.liu.se		  2005-04-12
   Tim Rice			tim@multitalents.net		  2005-11-10
   Eric Blake			ebb9@byu.net			  2006-01-18
 
