--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-07-22  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* libltdl/m4/libtool.m4 (_LT_SYS_DYNAMIC_LINKER) [linux]:
+	Ignore lines in ld.so.conf starting with 'hwcap '.
+
 2007-07-16  Charles Wilson  <libtool@cwilson.fastmail.fm>
 
 	* tests/cdemo-exec.test: use $EXEEXT where appropriate
