--- a/ChangeLog
+++ b/ChangeLog
@@ -2,8 +2,8 @@
 
 	* libltdl/config/ltmain.m4sh: Whitespace cleanup.
 
-	* libltdl/config/ltmain.m4sh (func_emit_cwrapperexe_src:
-	chase_symlinks): Avoid compiler warning.
+	* libltdl/config/ltmain.m4sh (func_emit_cwrapperexe_src)
+	(chase_symlinks): Avoid compiler warning.
 
 2007-07-22  Peter Rosin  <peda@lysator.liu.se>
 
