--- a/doc/libtool.texi
+++ b/doc/libtool.texi
@@ -27,7 +27,7 @@ This file documents GNU Libtool @value{VERSION}
 Copyright (C) 1996-2007 Free Software Foundation, Inc.
 
 Permission is granted to copy, distribute and/or modify this document
-under the terms of the GNU Free Documentation License, Version 1.1
+under the terms of the GNU Free Documentation License, Version 1.2
 or any later version published by the Free Software Foundation;
 with no Invariant Sections, with no Front-Cover Texts,
 and with no Back-Cover Texts.  A copy of the license is included in
@@ -5936,6 +5936,11 @@ The output of the final @samp{libtool --version} command shows that the
 @code{ltmain.in} script is being used directly.  Now, modify
 @code{~/bin/libtool} or @code{/home/src/libtool/ltmain.in} directly in
 order to test new changes without having to rerun @code{configure}.
+
+@node GNU Free Documentation License
+@appendix GNU Free Documentation License
+
+@cindex FDL, GNU Free Documentation License
 
 @include fdl.texi
 
