* ChangeLog: Fix typo.

--- a/ChangeLog
+++ b/ChangeLog
@@ -13,7 +13,7 @@
 	* libltdl/config/ltmain.m4sh: Whitespace cleanup.
 
 	* libltdl/config/ltmain.m4sh (func_emit_cwrapperexe_src)
-	(chase_symlinks): Avoid compiler warning.
+	<chase_symlinks>: Avoid compiler warning.
 
 2007-07-22  Peter Rosin  <peda@lysator.liu.se>
 
