--- a/THANKS
+++ b/THANKS
@@ -71,6 +71,7 @@
   Andrey Slepuhin		pooh@msu.ru
   Aneesh Kumar K.V		kvaneesh@hotmail.com
   Brad Smith			brad@comstyle.com
+  Brian Barrett			brbarret@osl.iu.edu
   Bruno Haible			haible@ilog.fr
   Carl D. Roth			roth@cse.ucsc.edu
   Chris P. Ross			cross@eng.us.uu.net
