--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-08-05  Tilman Koschnick  <til@subnetz.org>  (tiny change)
+
+	* libltdl/m4/libtool.m4 (_LT_COMPILER_PIC, _LT_LANG_CXX_CONFIG)
+	[ linux ]: Treat pgcpp as Portland Group C++ compiler as well.
+
 2007-08-05  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* libltdl/ltdl.c (try_dlopen): Use `attempt' rather than
