--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2007-08-16  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	* libltdl/m4/libtool.m4 (_LT_COMPILER_PIC) [ mingw, cygwin ]
+	<GCJ>: Do not use -DDLL_EXPORT.
+	Report by Ross Ridge <rridge@csclub.uwaterloo.ca>.
+
 	* Makefile.am (edit): Do not warn against manual editing for the
 	generated files libtool, libtoolize, libltdl/m4/ltversion.m4,
 	tests/defs, as they are still in a preferred source code form as
