--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-08-18  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* README: Fix testing instructions.
+	* README-alpha: Fix release instructions: build in a new tree.
+
 2007-08-16  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* libtool.m4 (AC_LIBTOOL_PROG_COMPILER_PIC): [ mingw, cygwin ]
