--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2007-09-01  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* libltdl/ltdl.c (try_dlopen): Do not test array address of
+	sys_dlsearch_path against NULL, rather test for nonempty
+	contents.
+	Coverity reports CID 148 and CID 149 via Jeff Squyres.
+
 2007-08-18  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* README: Fix testing instructions.
