--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,9 @@
 NEWS - list of user-visible changes between releases of GNU Libtool
 
 New in 1.5.25a: 2007-??-??; CVS version 1.5.25a, Libtool team:
+* More robust parsing of mangled `.la' files inside libltdl, fixing a
+  possible overrun and a crash due to memory exhaustion.
+* Fix compile command line for gcj on MinGW.
 * Bug Fixes.
 
 New in 1.5.24: 2007-06-17; CVS version 1.5.23c, Libtool team:
