--- a/doc/libtool.texi
+++ b/doc/libtool.texi
@@ -4022,7 +4022,8 @@ Use this function to register your interface validator with libltdl,
 and in return obtain a unique key to store and retrieve per-module data.
 You supply an @var{id_string} and @var{iface} so that the resulting
 @code{lt_dlinterface_id} can be used to filter the module handles
-returned by the iteration functions below.
+returned by the iteration functions below.  If @var{iface} is @code{NULL},
+all modules will be matched.
 @end deftypefun
 
 @deftypefun void lt_dlinterface_free (@w{lt_dlinterface_id @var{iface}})
