--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,9 @@ New in 1.5.25a: 2007-??-??; CVS version 1.5.25a, Libtool team:
 * More robust parsing of mangled `.la' files inside libltdl, fixing a
   possible overrun and a crash due to memory exhaustion.
 * Fix compile command line for gcj on MinGW.
+* Some configure variables have been renamed to fix caching:
+  lt_prog_compiler_pic_works to lt_cv_prog_compiler_pic_works
+  lt_prog_compiler_static_works to lt_cv_prog_compiler_static_works.
 * Bug Fixes.
 
 New in 1.5.24: 2007-06-17; CVS version 1.5.23c, Libtool team:
