--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+2007-11-16  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	Use `${top_build_prefix}' for better compatibility with non-GNU make.
+	* libltdl/m4/ltdl.m4 (_LT_BUILD_PREFIX): New macro.
+	If the Autoconf version used is >= 2.62, then expand to
+	`${top_build_prefix}', otherwise to `${top_builddir}/'.
+	(LTDL_CONVENIENCE, LTDL_INSTALLABLE): Use it for defining
+	LIBLTDL.  Fixes a build failure with AIX make in a package
+	using convenience libltdl in nonrecursive mode.
+	* doc/libtool.texi (Distributing libltdl): Document requirements
+	to define `top_build_prefix' if Automake is not used.
+	Report by Bob Friesenhahn.
+
 2007-11-12  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	Avoid warnings about conftest.dSYM directories on Mac OS X Leopard.
